# orchagent

./: .gitignore  .pre-commit-config.yaml  AGENTIC_UI_PLAN.md  GEMINI.md  MULTIMODAL_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: main.py  pyproject.toml
apps/backend/api/routes/: chat.py  health.py
apps/backend/core/: config.py  database.py
apps/backend/logs/: session.jsonl  usage.jsonl
apps/backend/models/: __init__.py  logging.py  trace.py
apps/backend/schemas/: chat.py
apps/backend/services/: file_logger.py  logging_service.py  storage_service.py  trace_service.py
apps/backend/tests/: README.md  conftest.py  test_agent_tools.py  test_api.py  test_dynamic_tools.py  test_error_handling.py  test_integration_llm.py  test_reasoning.py  test_schemas.py  test_state_schema.py  test_supervisor.py  test_team_subgraphs.py  test_trace_service.py  test_workflow_graph.py
apps/backend/workflow/: graph.py  main_graph.py
apps/backend/workflow/teams/: research.py  vision.py  writing.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/app/: page.tsx
apps/frontend/src/components/: HITLPanel.tsx
apps/frontend/src/lib/: chat-stream.js  chat-stream.test.mjs
docs/: RECOMMENDED_AGENTS.md
infra/compose/: docker-compose.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/scripts/: start-dev.sh
plans/: AGENTIC_UI_PLAN.md  BACKEND_QA_TEST_PLAN.md  HIERARCHICAL_MODERNIZATION_PLAN.md  MULTIMODAL_PLAN.md  PHASE_1_1_NATIVE_SUBGRAPH.md  PHASE_3_ADVANCED_FEATURES_PLAN.md
(+1 files in other folders)
